movr.yaml
# Deployment object
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movr-deployment
  labels:
    app: movr-app
spec:
  selector:
    matchLabels:
      app: movr-app
  replicas: 2
  template:
    metadata:
      labels:
        app: movr-app
    spec:
      containers:
        - image: gcr.io/movr-test-259013/movr-app:v1.0.2
          imagePullPolicy: Always
          name: movr-app
          ports:
            - containerPort: 8080
          args: ["gunicorn", "-b", "0.0.0.0:8080", "server:app"]
          volumeMounts:
            - mountPath: "/certs"
              name: certs
      volumes:
        - name: certs
          secret:
            secretName: movr-db-cert
---
# Service object
apiVersion: v1
kind: Service
metadata:
  labels:
    app: movr-app
  name: movr-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
    nodePort: 30062
  selector:
    app: movr-app
  type: NodePort
