mcingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-movr
  annotations:
    cloud.google.com/app-protocols: '{"my-https-port":"HTTPS"}'
    kubernetes.io/ingress.global-static-ip-name: movr-ip
    kubernetes.io/ingress.class: gce-multi-cluster
    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: movr-app
    servicePort: 80
